--- a/Demo/Classes/View/YGPlayerView.xib
+++ b/Demo/Classes/View/YGPlayerView.xib
@@ -186,16 +186,16 @@
             <constraints>
                 <constraint firstItem="ZKs-UR-zag" firstAttribute="top" secondItem="0Ab-OJ-Cwx" secondAttribute="bottom" constant="8" id="45n-vJ-R2P"/>
                 <constraint firstItem="MkO-jz-WQ2" firstAttribute="top" secondItem="xVp-Po-57j" secondAttribute="top" id="6ci-jm-1z3"/>
-                <constraint firstAttribute="trailing" secondItem="TKE-ir-nkp" secondAttribute="trailing" id="FPU-bJ-iPr"/>
-                <constraint firstItem="TKE-ir-nkp" firstAttribute="top" secondItem="xVp-Po-57j" secondAttribute="top" id="MVP-3Y-uPu"/>
-                <constraint firstItem="TKE-ir-nkp" firstAttribute="leading" secondItem="xVp-Po-57j" secondAttribute="leading" id="Q78-di-57r"/>
-                <constraint firstAttribute="bottom" secondItem="TKE-ir-nkp" secondAttribute="bottom" id="UUu-V6-XMD"/>
+                <constraint firstItem="TKE-ir-nkp" firstAttribute="leading" secondItem="xVp-Po-57j" secondAttribute="leading" id="KXE-R1-wAm"/>
+                <constraint firstAttribute="trailing" secondItem="TKE-ir-nkp" secondAttribute="trailing" id="VT2-Gi-4ah"/>
                 <constraint firstItem="ZKs-UR-zag" firstAttribute="leading" secondItem="xVp-Po-57j" secondAttribute="leading" id="WF4-gi-cQa"/>
                 <constraint firstAttribute="trailing" secondItem="0Ab-OJ-Cwx" secondAttribute="trailing" constant="8" id="bA3-VC-2xF"/>
                 <constraint firstAttribute="trailing" secondItem="MkO-jz-WQ2" secondAttribute="trailing" id="equ-zY-ydh"/>
+                <constraint firstAttribute="bottom" secondItem="TKE-ir-nkp" secondAttribute="bottom" id="gqv-bg-YWU"/>
                 <constraint firstAttribute="bottom" secondItem="ZKs-UR-zag" secondAttribute="bottom" id="jh0-fk-mdl"/>
                 <constraint firstAttribute="trailing" secondItem="ZKs-UR-zag" secondAttribute="trailing" id="n6I-Mn-rtb"/>
                 <constraint firstItem="MkO-jz-WQ2" firstAttribute="leading" secondItem="xVp-Po-57j" secondAttribute="leading" id="wLu-2e-aEW"/>
+                <constraint firstItem="TKE-ir-nkp" firstAttribute="top" secondItem="xVp-Po-57j" secondAttribute="top" id="xOd-xD-voj"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
